objects/Project_Role__c.object
<CustomObject>
    <customHelpPage>Project_Roles_Help_Text</customHelpPage>
    <description>This is used to track contacts associated with a project</description>
    <fields>
        <fullName>CCC_Include_in_Data_Load_Automated_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, this member contact will receive an automated email with load and release details when a CCA Data Load record has been marked as complete.</inlineHelpText>
        <label>CCC: Include in Data Load Member Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMA_Tech_Survey_Recipient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20140715-6246</description>
        <label>CMA: Tech Survey Recipient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMR_Email_List__c</fullName>
        <label>CMR Email List</label>
        <picklist>
            <picklistValues>
                <fullName>Cohort Services Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Management Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Contact_Institution__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Contact: Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_in_Data_Load_Automated_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include in Data Load Automated Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medinsight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medinsight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milliman__c</fullName>
        <label>Milliman</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Next_Data_Upload_Expected_On__c</fullName>
        <formula>Project__r.Next_Data_Upload_Expected_On__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project: Next Data Upload Expected On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Role_Contact_EMail__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Role Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Role_Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Role Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSRC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Consumer Scheduling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICD-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NUBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayNav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QUBI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Project Roles</relationshipLabel>
        <relationshipName>Project_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Receive_CMA_Load_Completed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20160420-9785.</description>
        <label>Receive CMA Load Completed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_Data_Load_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Should this contact receive an email reminder to upload data? 

Members will be reminded (7 days for Monthly, 14 days for Quarterly) prior to their Next Data Upload Expected On Date.</inlineHelpText>
        <label>Receive Data Load Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receive_PRM_Load_Completed_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20160420-9785.</description>
        <label>Receive PRM Load Completed Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <controllingField>Project_Type__c</controllingField>
            <picklistValues>
                <fullName>ACO Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audit Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Management Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Manager Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care Transformation Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Management Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDI Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMR Regional Market Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Signer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Expert - Census</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Expert - HCAHPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Device Procurement Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Management Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHBI Other 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EHBI Other 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive / Steering Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Champion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive’s Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SIAM_Portal_Status__c</fullName>
        <description>Auto-populated via integration with SIAM</description>
        <inlineHelpText>Auto-populated via integration</inlineHelpText>
        <label>SIAM Portal Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verisk_Access__c</fullName>
        <label>Verisk Access</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Role</label>
    <nameField>
        <label>Project Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>